# AutoDenoise

./: README.md  build_video_denoise.sh
Videodenoise/: CMakeLists.txt  main.cpp
ffmpeg/libavfilter/: filter_list.c
libNS/: CMakeLists.txt  main.cpp
libNS/libAGC/: CMakeLists.txt
libNS/libNS/: CMakeLists.txt  Makefile  noise_suppression.c
